# scylla_task

./: Potential_improvements.md  README.md  pyproject.toml
even_more_stress/: even_more_stress.py  main.py  stress_run.py  stress_run_entity.py
even_more_stress/core/: arg_parser.py  concurent_runner.py  stress_run_entity.py  utils.py
tests/: test_main.py  test_stress_run.py
tests/core/: test_even_more_stress.py  test_parser.py  test_stress_entity.py
