[tool.poetry]
name = "even-more-stress"
version = "0.1.0"
description = "Package which runns concurent cassandra-stress tests"
authors = ["Milosz Trojanowski"]
readme = "README.md"
packages = [{include = "even_more_stress"}]

[tool.poetry.scripts]
even-more-stress = "even_more_stress.even_more_stress:main"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"